applock 新增广告位

--- a/ad_applock_config.json
+++ b/ad_applock_config.json
@@ -8,5 +8,10 @@
     "id": "363439497322073_363460920653264",
     "cacheTime": 14400000,
     "specialCacheTime": 14400000
+  },
+  {
+    "id": "363439497322073_368646253468064",
+    "cacheTime":1800000 ,
+    "specialCacheTime": 1800000
   }
 ]
