--- a/ad_applock_config.json
+++ b/ad_applock_config.json
@@ -13,5 +13,10 @@
     "id": "363439497322073_368646253468064",
     "cacheTime":1800000 ,
     "specialCacheTime": 1800000
+  },
+  {
+    "id": "363439497322073_374980412834648",
+    "cacheTime":1800000 ,
+    "specialCacheTime": 1800000
   }
 ]
