--- a/ad_applock_config.json
+++ b/ad_applock_config.json
@@ -5,6 +5,11 @@
     "specialCacheTime": 9000000
   },
   {
+    "id": "363439497322073_388965154769507",
+    "cacheTime": 9000000,
+    "specialCacheTime": 9000000
+  },
+  {
     "id": "363439497322073_363460920653264",
     "cacheTime": 14400000,
     "specialCacheTime": 14400000
@@ -33,5 +38,10 @@
     "id": "363439497322073_380116215654401",
     "cacheTime":1200000 ,
     "specialCacheTime": 1200000
+  },
+  {
+    "id": "363439497322073_388964228102933",
+    "cacheTime": 1800000,
+    "specialCacheTime": 1800000
   }
 ]
