--- a/ad_applock_config2.json
+++ b/ad_applock_config2.json
@@ -3,8 +3,8 @@
     "name": "lockApps",
     "id": "363439497322073_388965154769507",
     "cacheTime": 3600000,
-    "rewardTime": 600000,
-    "bufferTime": 3600000
+    "rewardTime": 0,
+    "bufferTime": 600000
   },
   {
     "name": "interstitial",
