--- a/ad_applock_config2.json
+++ b/ad_applock_config2.json
@@ -4,7 +4,7 @@
     "id": "363439497322073_388965154769507",
     "cacheTime": 3000000,
     "rewardTime": 0,
-    "bufferTime": 7200000
+    "bufferTime": 600000
   },
   {
     "name": "interstitial",
