--- a/ad_applock_config3.json
+++ b/ad_applock_config3.json
@@ -5,7 +5,7 @@
     "duAdId":142540,
     "cacheTime": 3000000,
     "rewardTime": 0,
-    "bufferTime": 7200000
+    "bufferTime": 600000
   },
   {
     "name": "interstitial",
